# agentrace

./: .gitignore  README.md  pyproject.toml
agent_snoop/: __init__.py
agent_snoop/core/: models.py  tracer.py
agent_snoop/integrations/: langgraph.py
agent_snoop/storage/: base.py  liten_backend.py  mongodb.py
docs/: tutorial.md
examples/: langgraph_example.py
tests/: test_models.py  test_tracer.py
